--- a/package.json
+++ b/package.json
@@ -45,6 +45,9 @@
   "dependencies": {
     "@babel/polyfill": "^7.11.5",
     "jquery": "^3.5.1",
+    "jquery-ui": "^1.12.1",
+    "material-design-icons": "^3.0.1",
+    "material-icons": "^0.3.1",
     "normalize.css": "^8.0.1"
   }
 }
