--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.11.5",
+    "air-datepicker": "^2.2.3",
     "jquery": "^3.5.1",
     "jquery-ui": "^1.12.1",
     "material-design-icons": "^3.0.1",
