--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "mini-css-extract-plugin": "^0.11.2",
     "path": "^0.12.7",
     "pug": "^3.0.0",
+    "pug-alias": "^2.0.1",
     "pug-loader": "^2.4.0",
     "resolve-url-loader": "^3.1.1",
     "sass": "^1.26.11",
