--- a/package.json
+++ b/package.json
@@ -29,11 +29,13 @@
     "cross-env": "^7.0.2",
     "css-loader": "^4.3.0",
     "file-loader": "^6.1.0",
+    "html-loader": "^1.3.1",
     "html-webpack-plugin": "^4.5.0",
     "mini-css-extract-plugin": "^0.11.2",
     "path": "^0.12.7",
     "pug": "^3.0.0",
     "pug-alias": "^2.0.1",
+    "pug-html-loader": "^1.1.5",
     "pug-loader": "^2.4.0",
     "resolve-url-loader": "^3.1.1",
     "sass": "^1.26.11",
