--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "css-minimizer-webpack-plugin": "^1.1.5",
     "css-mqpacker": "^7.0.0",
     "cssnano": "^4.1.10",
+    "favicons-webpack-plugin": "^4.2.0",
     "file-loader": "^6.1.0",
     "html-loader": "^1.3.1",
     "html-webpack-plugin": "^4.5.0",
